Fixed spacing on page-block__form content block

--- a/wp-content/themes/gravitydocs2020/resources/assets/styles/page-blocks/_form.scss
+++ b/wp-content/themes/gravitydocs2020/resources/assets/styles/page-blocks/_form.scss
@@ -1,5 +1,5 @@
 .page-block__form {
-	padding: 0 20px 2.5rem 55px;
+	padding: 0 2rem 2.5rem 4.25rem;
 
 	@include media-breakpoint-up(lg) {
 		padding: 0 0 2.5rem 3.5rem;
